@@ -1,8 +1,11 @@
 * diredc NEWS
+** 2024-**
++ New feature to fontify filenames based upon their extension
+
+  + See new defcuston variable 'diredc-face-ext-alist'.
 ** 2024-03
 
 + New environment variable $INSIDE_DIREDC for shell windows.
-
 ** 2024-01
 
 + New feature for key-presses RETURN and C-u RETURN.
